--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,7 +56,7 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.1'
     implementation 'com.squareup.okhttp3:okhttp:4.9.1'
     implementation 'com.github.haroldadmin:NetworkResponseAdapter:4.2.1'
-    implementation 'com.localebro:okhttpprofiler:1.0.8'
+   // implementation 'com.localebro:okhttpprofiler:1.0.8'
     //coroutine
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.1'
@@ -71,7 +71,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
 
     // ViewModel
-    implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     kapt 'org.jetbrains.kotlinx:kotlinx-metadata-jvm:0.3.0'
 
     implementation 'com.squareup:javapoet:1.13.0'
